adLDAP - PHP LDAP CLASS FOR MANIPULATING ACTIVE DIRECTORY

Written by Scott Barnett, Richard Hyland
email: scott@wiggumworld.com, adldap@richardhyland.com
http://adldap.sourceforge.net/


CHANGELOG
-------------------------------------------------------------------------------------------

Version 4.0.4
-------------
[-] Feature Change: Changed $adldap->user()->getLastLogon from using the lastLogin attribute to lastLogonTimestamp. The difference between the two is detailed here http://blogs.technet.com/b/askds/archive/2009/04/15/the-lastlogontimestamp-attribute-what-it-was-designed-for-and-how-it-works.aspx
[-] Bug Fix: $adldap->user()->getLastLogon('mySAMAccountName') produced a PHP error 'Non-static method adLDAPUtils::convertWindowsTimeToUnixTime() should not be called statically'
[-] Bug Fix: #29 $includeDescription broken in adLDAPContacts->all()
[-] Bug Fix: #25 exchange->createMailbox typo in $storageGroup variable null checking
[-] Bug Fix: #25 exchange->createMailbox Call to undefined method adLDAPExchange::utilities()
[-] Bug Fix: #27 Case mismatch on an array key in the folder()->create()
[-] Bug Fix: Typo in $adldap->contact()->contactMailEnable() for email address so that the function wouldn't work as intended
[-] Bug Fix: $adldap->folder->create() typo would have failed to create the folder correctly
[-] Bug Fix: Some uninitialized variable warnings quashed for PHP Strict Mode

Version 4.0.3
-------------
[+] New feature: Added support for homephone attribute to the adLDAP schema
[+] New feature: Added getLastLogon($username) to the user model to return a Unix timestamp for the last logon of a user
[-] Bug fix: Change strGuidToHex to public function to prevent errors when used with $isGUID = true
[-] Bug fix: user()->find() function would cause an undefined array error if full error reporting was enabled
[-] Bug fix: #11 If the array "$this->info[0][strtolower($attribute)]" contains a key with 0 (zero), it does not add to the array